--- a/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
+++ b/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>CSCore.Ffmpeg</AssemblyName>
-    <TargetFrameworks>net461;netcoreapp2.0</TargetFrameworks>
+    <!-- <TargetFrameworks>net461;netcoreapp2.0</TargetFrameworks> -->
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Copyright>Florian R.</Copyright>
     <Description>.NET Sound Library - FFmpeg Wrapper</Description>
@@ -13,7 +14,8 @@
     <ProjectReference Include="..\CSCore\CSCore.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+  <!-- <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'"> -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
   </ItemGroup>
 
