--- a/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
+++ b/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <AssemblyName>CSCore.Ffmpeg</AssemblyName>
     <!-- <TargetFrameworks>net461;netcoreapp2.0</TargetFrameworks> -->
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <!-- <TargetFrameworks>netstandard2.1</TargetFrameworks> -->
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Copyright>Florian R.</Copyright>
     <Description>.NET Sound Library - FFmpeg Wrapper</Description>
@@ -14,13 +15,8 @@
     <ProjectReference Include="..\CSCore\CSCore.csproj" />
   </ItemGroup>
 
-  <!-- <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'"> -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+  <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-    <Reference Include="System.Configuration" />
   </ItemGroup>
 
   <ItemGroup>
