--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>CSCore</AssemblyName>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <!-- <TargetFrameworks>netstandard2.1</TargetFrameworks> -->
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <VersionPrefix>1.2.1.1</VersionPrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
